<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isl.audit.activity.AuditListActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:background="@color/header" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:drawableLeft="@drawable/back"
            android:padding="@dimen/_10sdp"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:text="@string/my_audits"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/tv_no_audit_found"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        android:text="@string/no_audits_found"
        android:textColor="@color/header"
        android:textSize="@dimen/_14ssp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rv_items"
        android:layout_margin="@dimen/_5sdp"
        android:layout_below="@+id/rl_top"
        android:layout_height="wrap_content"/>


</RelativeLayout>