<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.isl.audit.activity.AssetsListActivity">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="fill_parent"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:background="@color/header" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/header"
            android:drawableLeft="@drawable/back"
            android:padding="@dimen/_10sdp"
            android:text="@string/back"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/button_back"
            android:layout_toLeftOf="@+id/tv_save"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginRight="@dimen/_5sdp"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/tv_add_asset"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/click_add_button"
        android:textColor="@color/pm_chklist_bg_group"
        android:textSize="@dimen/_14ssp"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rv_assets"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_above="@+id/tv_submit"
        android:layout_below="@+id/rl_top"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/_20sdp"
        android:id="@+id/rl_add"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/bg_add"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/add_white"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <TextView
        android:layout_width="@dimen/_120sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:id="@+id/tv_submit"
        android:paddingLeft="@dimen/_20sdp"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/white"
        android:text="@string/submit"
        android:background="@drawable/bg_submit_button"
        android:paddingRight="@dimen/_20sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_height="wrap_content"/>


</RelativeLayout>