<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp">

        <com.isl.leaseManagement.utils.CustomTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/color_253746"
            android:textSize="@dimen/_14ssp" />

        <com.isl.leaseManagement.utils.CustomTextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/color_505F6B"
            android:textSize="@dimen/_14ssp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_below="@+id/rl_top"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_8sdp">

        <com.isl.leaseManagement.utils.CustomTextView
            android:id="@+id/option1Btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:layout_weight="10"
            android:background="@drawable/btn_orange_rect_bg"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible" />

        <com.isl.leaseManagement.utils.CustomTextView
            android:id="@+id/option2Btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_weight="10"
            android:background="@drawable/btn_grey_border_bg"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/color_606F8A"
            android:textSize="@dimen/_14ssp" />


    </LinearLayout>

</RelativeLayout>