<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.isl.app.auth.TokenActivity"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/tawal_icon"
                android:contentDescription="@string/openid_logo_content_description"/>

            <!--
            displayed while token requests are occurring
            -->
            <LinearLayout
                android:id="@+id/loading_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/loading_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"/>

            </LinearLayout>

            <!-- Shown when authorization has failed. -->
            <LinearLayout
                android:id="@+id/not_authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/not_authorized"
                    style="@style/Base.TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/explanation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp" />

                <Button
                    android:id="@+id/reauth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reauthorize" />

            </LinearLayout>

            <!-- Shown when the user is authorized, and there are no pending operations -->
            <LinearLayout
                android:id="@+id/authorized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/auth_granted"
                    android:textColor="@color/textcolor"
                    android:textSize="16dp"
                    android:layout_marginTop="20dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <TextView
                        android:id="@+id/refresh_token"
                        android:text="@string/refresh_token"
                        style="@style/ButtonDefault"
                        android:textStyle="normal"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/view_profile"
                        android:text="@string/view_profile"
                        style="@style/ButtonDefault"
                        android:textStyle="normal"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/sign_out"
                        android:text="Back"
                        style="@style/ButtonSecondary"
                        android:textStyle="normal"
                        android:gravity="center"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/refresh_token_info"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Refresh token returned"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/access_token_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Token expires at: 2016-01-01 12:00 UTC"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/id_token_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:text="ID token returned"
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:visibility="gone"/>

                <LinearLayout
                    android:id="@+id/userinfo_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:id="@+id/userinfo_profile"
                            android:contentDescription="@string/userinfo_profile_content_description"
                            app:srcCompat="@drawable/thawal_logo" />

                        <TextView
                            android:id="@+id/userinfo_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
                            android:paddingStart="8dp"
                            android:paddingRight="0dp"
                            android:paddingEnd="0dp"
                            tools:text="Jane Doe"
                            style="@style/Base.TextAppearance.AppCompat.Title" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/userinfo_json"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        tools:text=""
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
